--- a/launch.html
+++ b/launch.html
@@ -26,6 +26,11 @@
         <progress class="update" id="progress-bar" max="" value="" style="opacity: 0"></progress>
         <div id="button-form" class="button-form"></div>
     </div>
+    <center>
+        <div>
+            <p class="credit">Chaque opération peut prendre un moment, veuillez patienter.</p>
+        </div>
+    </center>
     <script src="./assets/js/scripts_launch.js"></script>
     <script src="./assets/js/global.js"></script>
 </body>
