--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </div>
     <center>
         <div>
-            <p class="credit">Proposé par <b>GoldFrite#5605</b> • v1.0.4</p>
+            <p class="credit">Proposé par <b>GoldFrite#5605</b> • <span id="ver"></span></p>
         </div>
     </center>
     <script src="./assets/js/scripts_index.js"></script>
