--- a/settings.html
+++ b/settings.html
@@ -81,8 +81,7 @@
                     <p class="title"><b><i class="fas fa-laptop"></i> Configuration minimale requise</b></p>
                     <div class="body-form">
                         <p style="line-height: 25px; margin: 0px;">
-                            <b>Système d'exploitation :</b> Windows 7 ; OS X El Capitan (10.11) ; Ubuntu 14.04 ; Fedora
-                            24 ; Debian 8<br>
+                            <b>Système d'exploitation :</b> Windows 7 ; OS X El Capitan (10.11)<br>
                             <b>Architecture :</b> 32 bits (x64, x86, ARM)<br>
                             <b>Mémoire vive totale :</b> 4 Go<br>
                             <b>Processeur :</b> Intel Core i3-3210 ; AMD A8-7600 APU ;
@@ -101,8 +100,7 @@
                     <p class="title"><b><i class="fas fa-desktop"></i> Configuration minimale recommandée</b></p>
                     <div class="body-form">
                         <p style="line-height: 25px; margin: 0px;">
-                            <b>Système d'exploitation :</b> Windows 10 ; macOS Big Sur (11.x ou 10.16) ; Ubuntu 20.04 ;
-                            Fedora 33 ; Debian 10<br>
+                            <b>Système d'exploitation :</b> Windows 10 ; macOS Big Sur (11.x ou 10.16)<br>
                             <b>Architecture :</b> 64 bits (x64, x86, ARM)<br>
                             <b>Mémoire vive totale :</b> 8 Go<br>
                             <b>Processeur :</b> Intel Core i5-4690 ; AMD
